# archon

./: .env.example  .gitignore  .mcp.json  README.md  docker-compose.yml  install.py  main.py  package.json  pyproject.toml
skill/: SKILL.md
skill/references/: mcp-integration.md  protocol-guide.md
src/: config.py  credentials.py  mcp_server.py  onboarding.py
src/agent/: graph.py  memory.py
src/agents/nas_cataloger/: __init__.py  graph.py
src/agents/nas_cataloger/protocols/: __init__.py  base.py  factory.py  local.py  nfs.py  smb.py
src/agents/nas_cataloger/tools/: __init__.py  filesystem.py
src/agents/torrent_hunter/: __init__.py  graph.py
src/agents/torrent_hunter/tools/: __init__.py  iptorrents.py
src/api/: main.py
src/enrichers/: face.py  llm_enricher.py  metadata.py
src/extractors/: binary.py  metadata_extract.py
src/graph/: base.py  factory.py  kuzu_backend.py  mcp_tools.py  neo4j_backend.py  schema.py
src/pipeline/: indexer.py  state.py  worker.py
src/tools/: registry.py
tests/: test_nas_tools.py  test_protocols.py  test_tools.py
