[project]
name = "onyx-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
