[project]
name = "archon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.7",
    "exifread>=3.5.1",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "lief>=0.17.6",
    "neo4j>=6.1.0",
    "onnxruntime-gpu>=1.24.4",
    "openpyxl>=3.1.5",
    "pefile>=2024.8.26",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "py7zr>=1.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "smbprotocol>=1.16.1",
    "uvicorn[standard]>=0.44.0",
]

[tool.uv.extra-build-dependencies]
kuzu = ["setuptools"]
insightface = ["setuptools"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
